--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ body {
 .header-container {
   display: flex;
   align-items: center;
-  align-items: space-between;
+  justify-content: space-between;
 }
 
 /*
