--- a/css/styles.css
+++ b/css/styles.css
@@ -300,30 +300,42 @@ body {
   padding-bottom: 40px;
   padding-left: 40px;
 }
+/*div(чтоб отодвинуть список) в кот сидит кнопка(крестик)*/
+.mobile-menu-crose-btn {
+  margin-bottom: 32px;
+}
 /*кнопка с крестиком в мобильном меню,споз-я относительно доп класса в контейнере*/
 .mobile-menu-close-btn {
+  display: flex;
+  width: 24px;
+  height: 24px;
+  align-items: center;
+  justify-content: center;
+
   position: absolute;
   top: 24px;
   right: 15px;
 
-  background-color: transparent;
-  border: none;
   padding: 0;
   line-height: 0;
+
+  background-color: #e7e9fc;
+  border: 1px solid #2e2f42;
+  border-radius: 50%;
 }
 
-.mobile-menu-items {
+.mobile-menu-set {
   margin-bottom: 284px;
 }
-/*ul для mobile-menu*/
+/*ul для страниц mobile-menu*/
 .mobile-menu-items {
-  padding-top: 32px;
   list-style: none;
 }
-/*стили для a,которая сидит в li мобильного меню */
-.mobile-menu-link {
+.mobile-menu-item {
   margin-bottom: 40px;
-
+}
+/*стили для a мобильного меню */
+.mobile-menu-link {
   font-size: var(--fourth-font-size);
   line-height: var(--fifth-line-height);
   font-weight: var(--second-font-weight);
@@ -332,14 +344,76 @@ body {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/*у последней a,кот сидит в  Li margin-bottom:284px*/
-.mobile-menu-items .mobil-menu-link:last-child {
-  margin-bottom: 284px;
+/*у последней Li margin-bottom:284px*/
+.mobile-menu-items .mobil-menu-item:last-child {
+  margin-bottom: 0;
 }
-
+/*меняет цвет при ховере и фокусе*/
 .mobile-menu-link:hover,
 .mobile-menu-link:focus {
   color: #404bbf;
+}
+/*div в котором сидят tel и mailto*/
+.mobile-menu-contact-tel {
+  margin-bottom: 48px;
+}
+
+.mobile-menu-contact-tel-link {
+  font-weight: 700;
+  font-size: var(--fourth-font-size);
+  line-height: var(--fifth-line-height);
+  letter-spacing: var(--first-letter-spacing);
+  color: var(--fourth-color);
+
+  margin-bottom: 40px;
+}
+.mobile-menu-contact-mailto {
+  margin-bottom: 48px;
+}
+
+.mobile-menu-contact-mailto-link {
+  font-weight: var(--typical-font-weight);
+  font-size: var(--first-font-size);
+  line-height: var(--third-line-height);
+  letter-spacing: var(--first-letter-spacing);
+  color: var(--text-color);
+}
+
+/*ul список ссылок соцсетей*/
+.mobile-menu-list-icon {
+  display: flex;
+  list-style: none;
+
+  justify-content: center;
+  gap: 56px;
+}
+
+/*li элемент ссылок соцсетей*/
+.mobile-menu-item-icon {
+  width: 40px;
+  height: 40px;
+}
+
+/*a ccылок соцсетей*/
+.mobile-menu-link-icon {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color-4);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  color: var(--fifth-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-link-icon:hover,
+.mobile-menu-link-icon:focus {
+  background-color: var(--background-color-5);
+}
+.mobile-menu-icon {
+  fill: currentColor;
 }
 
 /*======================/HEADER==========================*/
