--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,9 @@ body {
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }*/
+.header {
+  position: relative;
+}
 
 /*container для mobile,tablet,desktop*/
 .container {
@@ -133,6 +136,17 @@ body {
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1158px;
+  }
+}
+
+.menu-container {
+  @media screen and (max-width: 767px) {
+    display: none;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
   }
 }
 
