--- a/css/styles.css
+++ b/css/styles.css
@@ -495,6 +495,11 @@ body {
     max-width: 320px;
   }
 }
+@media screen and (min-width: 428px) {
+  .hero-title {
+    display: block;
+  }
+}
 
 /*главный заголовок в нero*/
 .hero-title {
