--- a/css/styles.css
+++ b/css/styles.css
@@ -544,7 +544,7 @@ body {
   background-color: var(--third-color);
 }
 
-/*overlay*
+/*overlay-картинка большая и красивая*/
 .overlay {
   margin-left: auto;
   margin-right: auto;
@@ -559,7 +559,27 @@ body {
   background-position: center;
   background-color: var(--beckground-color-2);
 }
+/*затемнение поверх всего */
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4);
 
+  opacity: 1;
+  visibility: visible;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none; /*событие укозателя(мышь,сенсор)*/
+}
 
 /*overlay*
 .overlay {
@@ -599,6 +619,12 @@ body {
   pointer-events: none;
 }
 
+
+
+
+
+
+
 /*модальное окно*/
 .modal {
   width: 408px;
@@ -618,6 +644,52 @@ body {
 }
 
 /*buttom для иконки-то в чем сидит иконка(крестик)*/
+.hero-svg {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  bottom: 528px;
+
+  display: flex;
+  width: 24px;
+  height: 24px;
+  background-color: var(--background-color-8);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  align-items: center;
+  justify-content: center;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-svg:hover,
+.hero-svg:focus {
+  background-color: var(--background-color-5);
+  fill: var(--first-color);
+}
+
+/*модальное окно*
+.modal {
+  width: 408px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-height: 576px;
+  background-color: var(--background-color-7);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  padding: 72px 24px 24px;
+}
+
+/*buttom для иконки-то в чем сидит иконка(крестик)*
 .hero-svg {
   position: absolute;
   top: 24px;
@@ -736,18 +808,110 @@ body {
   padding-top: 8px;
   padding-left: 16px;
 }
+
+/*форма в модальном окне*/
+
+/*заголовок в форме*
+.hero-form-title {
+  font-weight: var(--typical-font-weight);
+  line-height: var(--first-line-height);
+  text-align: center;
+  letter-spacing: var(--first-letter-spacing);
+  color: var(--second-color);
+
+  margin-bottom: 16px;
+}
+
+/*поле*
+.form-field {
+  margin-bottom: 8px;
+}
+
+/*метка,связывающая текст метки и элемент формы*
+.form-label {
+  font-size: var(--fifth-font-size);
+  line-height: var(--third-line-height);
+  letter-spacing: var(--fourth-letter-spacing);
+  color: var(--seventh-color);
+
+  margin-bottom: 4px;
+}
+
+.form-wrapper {
+  position: relative;
+}
+/*input-элемент для создания поля ввода*
+.form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid var(--fourth-color);
+  border-radius: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 38px;
+  margin: 0;
+  outline: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  border-color: var(--background-color-4);
+}
+
+/*svg-иконки в input-тах формы*
+.form-svg {
+  position: absolute;
+  top: 50%;
+  left: 19px;
+
+  transform: translateY(-50%);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+/*когда input в фокусе меняется fill соседа-svg-иконки*
+.form-input:focus + .form-svg {
+  fill: var(--background-color-4);
+}
+
+/*div в котором сидит коментарий с текстерией*
+.comment-textarea {
+  margin-bottom: 16px;
+}
+.form-comment {
+  display: block;
+  width: 100%;
+  min-height: 120px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+
+  line-height: var(--third-line-height);
+  letter-spacing: var(--third-letter-spacing);
+  color: rgba(117, 117, 117, 0.5);
+
+  padding-top: 8px;
+  padding-left: 16px;
+}
 textarea {
   resize: none;
 }
 .form-comment:focus {
   border-color: var(--background-color-4);
 }
-/*div в котором находиться чекбокс*/
+/*div в котором находиться чекбокс*
 .hero-form-checkbox {
   margin-bottom: 24px;
 }
 
-/*label для чекбокса*/
+/*label для чекбокса*
 .form-label-checkbox {
   display: block;
   font-size: 12px;
@@ -756,12 +920,12 @@ textarea {
   color: var(--eighth-color);
 }
 
-/*input(элемент для создания поля определенного типа(чекбокс))*/
+/*input(элемент для создания поля определенного типа(чекбокс))*
 .form-checkbox {
   appearance: none;
   position: absolute;
 }
-/*иконка-заменитель(svg) чекбокса*/
+/*иконка-заменитель(svg) чекбокса*
 .checkbox-icon {
   display: inline-block;
   width: 16px;
@@ -777,7 +941,7 @@ textarea {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*при нажатии на чекбокс меняется цвет соседа svg-иконки-заменителя*/
+/*при нажатии на чекбокс меняется цвет соседа svg-иконки-заменителя*
 .form-checkbox:checked + .checkbox-icon {
   background-color: var(--background-color-5);
   background-image: url(../images/click.svg);
@@ -785,7 +949,7 @@ textarea {
   background-position: center;
 }
 
-/*цвет ссылки в части текста */
+/*цвет ссылки в части текста *
 .form-link {
   color: var(--background-color-4);
 }
